[package]
name = "str4d-fly-dev"
version = "0.1.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
# Webserver
anyhow = "1"
axum = "0.7"
cached = { version = "0.55", features = ["async"] }
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

# Templates
askama = { version = "0.12", features = ["serde-json", "with-axum"] }
askama_axum = "0.4"
timeago = { version = "0.4", default-features = false, features = ["chrono"] }

# Datafeeds
atrium-api = "0.25"
atrium-xrpc-client = { version = "0.5", default-features = false, features = [
    "reqwest",
] }
chrono = { version = "0.4", features = ["serde"] }
graphql_client = "0.14"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Data
phf = { version = "0.11", features = ["macros"] }

# Workaround for https://github.com/tokio-rs/tracing/issues/2565
regex = { version = "1.0", features = ["unicode-case", "unicode-perl"] }
